Update name to ELİF KILIÇ in bio.html

--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elif Kilic – Bio & Favorites</title>
+    <title>ELİF KILIÇ – Bio & Favorites</title>
     <style>
         * {
             margin: 0;
@@ -288,7 +288,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">Elif Kilic</a>
+            <a href="/" class="logo">ELİF KILIÇ</a>
             
             <!-- Bio Dropdown -->
             <div class="dropdown">
@@ -374,7 +374,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; <span id="year"></span> Elif Kilic. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
     </footer>
 
     <script>
