--- a/bio/cv.html
+++ b/bio/cv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Elif Kılıç — CV</title>
+  <title>ELİF KILIÇ — CV</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* Compact CV styles */
@@ -25,7 +25,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Elif Kılıç</h1>
+      <h1 class="site-title">ELİF KILIÇ</h1>
       <nav class="site-nav">
         <a href="index.html">Home</a>
         <a href="research.html">Research</a>
@@ -39,7 +39,7 @@
   <div class="backlink"><a href="javascript:window.print()">🖨️ Print / Save as PDF</a></div>
 
   <main role="main">
-    <h1>Elif Kılıç</h1>
+    <h1>ELİF KILIÇ</h1>
     <p class="contact">
       Oakland, CA · <a href="mailto:eli2ilic@berkeley.edu">elifkilic@berkeley.edu</a> ·
       <a href="https://www.linkedin.com/in/elifakilic" target="_blank" rel="noopener">linkedin.com/in/elifakilic</a>
@@ -175,7 +175,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">© <span id="y"></span> Elif Kılıç</div>
+    <div class="container">© <span id="y"></span> ELİF KILIÇ</div>
   </footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
