--- a/bio/teaching-materials.html
+++ b/bio/teaching-materials.html
@@ -251,7 +251,7 @@
 
     <!-- Content Screen -->
     <div class="content-screen" id="contentScreen">
-        <a href="teaching.html" class="back-link">← Back to Teaching Page</a>
+        <a href="bio/teaching.html" class="back-link">← Back to Teaching Page</a>
         
         <div class="header">
             <h1>📚 Private Teaching Materials</h1>
@@ -402,8 +402,8 @@
     </div>
 
     <script>
-        // Set your password here - CHANGE THIS!
-        const CORRECT_PASSWORD = "YourSecurePassword123";
+        // Set password here 
+        const CORRECT_PASSWORD = "K7m$EliF!Teach25";
 
         // Check if already logged in (using session storage)
         window.onload = function() {
