--- a/bio/teaching.html
+++ b/bio/teaching.html
@@ -406,12 +406,11 @@
                     <li>Developed supplementary course materials to enhance student understanding</li>
                 </ul>
                 
+                <!-- Add this inside the course-materials div for relevant courses -->
                 <div class="course-materials">
                     <h3>📚 Course Materials</h3>
                     <div class="materials-links">
-                        <a href="/assets/teaching/eps81/worksheet1.pdf" class="material-link">Study Session Worksheet 1</a>
-                        <a href="/assets/teaching/eps81/exam-review.pdf" class="material-link">Exam Review Guide</a>
-                        <a href="/assets/teaching/eps81/lecture-slides.pdf" class="material-link">Guest Lecture Slides</a>
+                        <a href="bio/teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
                     </div>
                 </div>
             </div>
