--- a/bio/teaching.html
+++ b/bio/teaching.html
@@ -339,7 +339,7 @@
                     <a href="/bio.html">About Me</a>
                     <a href="/cv.html">CV</a>
                     <a href="/projects.html">Projects</a>
-                    <a href="/teaching.html">Teaching</a>
+                    <a href="/bio/teaching.html">Teaching</a>
                 </div>
             </div>
             
@@ -410,7 +410,7 @@
                 <div class="course-materials">
                     <h3>📚 Course Materials</h3>
                     <div class="materials-links">
-                        <a href="bio/teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
+                        <a href="/bio/teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
                     </div>
                 </div>
             </div>
