--- a/bio/teaching.html
+++ b/bio/teaching.html
@@ -410,7 +410,7 @@
                 <div class="course-materials">
                     <h3>📚 Course Materials</h3>
                     <div class="materials-links">
-                        <a href="/bio/teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
+                        <a href="teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
                     </div>
                 </div>
             </div>
