Standardize navigation and name consistency across all pages
- Updated all instances of name to ELİF KILIÇ (consistent capitalization)
- Standardized Bio dropdown: About Me, Projects, Teaching
- Standardized Research dropdown: Extended Heat Index, Future Heat Stress, Publications / Presentations
- Standardized ClimaCoder dropdown with Team, Research (nested submenu with all Latin American countries), and Writing
- Added invisible hover bridge (.dropdown::before) to all navigation menus for better UX
- Added nested dropdown CSS support consistently across all pages
- Rebuilt research/publications.html with proper structure and consistent navigation

--- a/bio.html
+++ b/bio.html
@@ -295,19 +295,18 @@
                 <a href="/bio.html">Bio</a>
                 <div class="dropdown-content">
                     <a href="/bio.html">About Me</a>
-                    <a href="/cv.html">CV</a>
-                    <a href="/projects.html">Projects</a>
-                    <a href="/teaching.html">Teaching</a>
+                    <a href="/bio/projects.html">Projects</a>
+                    <a href="/bio/teaching.html">Teaching</a>
                 </div>
             </div>
-            
+
             <!-- Research Dropdown -->
             <div class="dropdown">
                 <a href="/research.html">Research</a>
                 <div class="dropdown-content">
-                    <a href="/research/heatindex.html">Heat Index Calculator</a>
-                    <a href="/research.html#ehi350">EHI-350 Measurement</a>
-                    <a href="/research.html#publications">Publications</a>
+                    <a href="/research/heatindex.html">Extended Heat Index</a>
+                    <a href="/research.html#future-heat-stress">Future Heat Stress</a>
+                    <a href="/research/publications.html">Publications / Presentations</a>
                 </div>
             </div>
             
