Update website content with personalized bio, research snapshot, and teaching materials
Main Page (index.html):
- Added current research snapshot featuring EHI-350 work for IECC and Latin America systematic review
- Created research cards with descriptive summaries and learn more links
- Streamlined intro to focus on current work

Bio Page (bio.html):
- Made bio more personal and engaging
- Added current reading: La era del conspiracionismo by Ignacio Ramonet
- Included hydroponics hobby and travel experiences
- Expanded little joys section

Projects Page (bio/projects.html):
- Reorganized chronologically from current to early research
- Added detailed descriptions for all research projects
- Included ClimaCoder systematic review section
- Added MIT Lincoln Laboratory work
- Expanded Georgia Tech, Emory, and UF research descriptions
- Added relevant tags for each project

Teaching Page (bio/teaching.html):
- Rewrote in narrative, flowy style
- Removed email addresses (kept instructor names only)
- Made descriptions more personal and engaging
- Added password-protected links to teaching materials

Teaching Materials Page (bio/teaching-materials.html):
- Updated with all actual Google Docs links for EPS 81
- Added all homework and exam error guides
- Included EPS C20 discussion slides and quizzes
- Added E93 guest lecture presentation

--- a/bio.html
+++ b/bio.html
@@ -335,22 +335,38 @@
     </header>
 
     <main>
-        <h2>Bio & Favorites</h2>
-        
+        <h2>About Me</h2>
+
         <div class="bio-intro">
             <p>
-                I love micro-adventures around the Bay Area, reading widely, and building 
-                tools that help people thrive in heat.
+                I'm a climate scientist and environmental engineer passionate about understanding and addressing
+                extreme heat vulnerability. When I'm not modeling heat stress or analyzing climate data, you'll
+                find me exploring micro-adventures around the Bay Area, tending to my growing hydroponic garden,
+                or getting lost in a good book.
             </p>
         </div>
 
         <div class="favorites-section">
-            <h3>Now reading</h3>
-            <p><em>[Add your current book]</em></p>
-            
-            <h3>Little joys</h3>
+            <h3>Currently</h3>
             <p>
-                Strong coffee, street markets, public libraries, walks in local parks.
+                <strong>Reading:</strong> <em>La era del conspiracionismo: Trump, el culto a la mentira y el asalto al Capitolio</em> by Ignacio Ramonet
+            </p>
+            <p>
+                <strong>Learning:</strong> Transitioning to hydroponics and exploring sustainable urban gardening techniques
+            </p>
+
+            <h3>Travel</h3>
+            <p>
+                I've been fortunate to explore diverse landscapes and cultures across South America, Central America,
+                and Europe. These experiences have deepened my understanding of how climate and environment shape
+                communities differently across the world, informing both my research perspective and my commitment
+                to creating accessible, culturally-relevant climate tools.
+            </p>
+
+            <h3>Little Joys</h3>
+            <p>
+                Strong coffee, street markets, public libraries, walks in local parks, discovering new podcasts,
+                and the satisfaction of watching plants grow from seed to harvest.
             </p>
         </div>
 
@@ -364,7 +380,7 @@
 
             <blockquote>
                 <p>
-                    "I'm here to contribute. We all depend on each other. I depend on people 
+                    "I'm here to contribute. We all depend on each other. I depend on people
                     in generations prior to me. People in generations after me will depend on me."
                 </p>
                 <footer>Bryan Nwafor</footer>
