--- a/bio/teaching-materials.html
+++ b/bio/teaching-materials.html
@@ -261,48 +261,105 @@
         <!-- EPS 81 Materials -->
         <div class="course-section">
             <h2>EPS 81: Extreme Weather and Climate</h2>
+            <p style="color: #666; margin-bottom: 20px; font-size: 0.95rem;">Class notes and supplementary materials created to help students master complex climate science concepts</p>
             <ul class="material-list">
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Study Session 1: Climate Basics</div>
-                        <div class="material-description">Worksheet covering fundamental climate concepts</div>
+                        <div class="material-title">Class Notes Taken</div>
+                        <div class="material-description">Comprehensive notes from lecture sessions</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
-                    </div>
-                </li>
-                
-                <li class="material-item">
-                    <div class="material-info">
-                        <div class="material-title">Study Session 2: Atmospheric Circulation</div>
-                        <div class="material-description">Practice problems on wind patterns and pressure systems</div>
-                    </div>
-                    <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
+                        <a href="https://docs.google.com/document/d/1ALgmZfklOpSPY3SDbV-I2ap1pgYbiiL0FyJjbxexQwg/edit?usp=sharing" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
 
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Midterm Review Guide</div>
-                        <div class="material-description">Comprehensive review covering first half of course</div>
+                        <div class="material-title">Exam 1: Common Errors to Avoid</div>
+                        <div class="material-description">Guide highlighting frequent mistakes on Exam 1</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
+                        <a href="https://docs.google.com/document/d/11oaQ-TnZ_vGPJhHosUyb5phtR3GoY_kylR_cCcBKmfA/edit?usp=sharing" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
 
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Guest Lecture: Heat Index & Human Health</div>
-                        <div class="material-description">Slides from guest lecture on extreme heat</div>
+                        <div class="material-title">Exam 2: Common Errors to Avoid</div>
+                        <div class="material-description">Guide highlighting frequent mistakes on Exam 2</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
+                        <a href="https://docs.google.com/document/d/1OIj2aZQK65wYfsWWCtIJ-KIFPRhDS3vlLpfUkWcpOQY/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Exam 2 Practice Material Worksheet</div>
+                        <div class="material-description">Practice problems and review exercises for Exam 2</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/1x_tVg7Y1pBTb13oTLyyJsN-Ijsui0BnZDTQHHQ2gTQM/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 1: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 1</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/1uUzoez6SR8qc_R_w6PGuJvs680Oh-96CiaWYkywXdjQ/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 2: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 2</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/1UQQY3RJ6hUm8IfxPXYy0PtiiI1IJAwhddgs1gcIhSho/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 3: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 3</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/1JniSrTKJXZlV9vFeN0yWsQfqKwGZMW47bA3pWUw0wSU/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 4: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 4</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/120FAlP36hURMwsqbo5v17g4fv1xDscqcQx9iCPnuI0k/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 5: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 5</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/1G-weVPBC2uFqF54qz3Vpd_jD8GATeEe8dvtF5dN8HKs/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Homework 6: Common Errors</div>
+                        <div class="material-description">Solutions and common pitfalls from Homework 6</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://docs.google.com/document/d/12tynzojOTgMpruQqklG0_yvmcAtzOTsOt5s-xD5-JzE/edit?usp=sharing" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
             </ul>
@@ -311,90 +368,52 @@
         <!-- EPS C20 Materials -->
         <div class="course-section">
             <h2>EPS C20: Earthquakes in Your Backyard</h2>
+            <p style="color: #666; margin-bottom: 20px; font-size: 0.95rem;">Discussion slides and interactive materials for earthquake science</p>
             <ul class="material-list">
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Discussion Section Notes - Week 1</div>
-                        <div class="material-description">Introduction to earthquake mechanics</div>
+                        <div class="material-title">Week 5 Discussion Slides</div>
+                        <div class="material-description">Discussion materials with exercises and questions</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
+                        <a href="https://docs.google.com/presentation/d/13sXyG5erH-wuTCWFEdiG50IobH5sJmMj9Ayo_aQ2fAc/edit?usp=sharing" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
 
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Hazard Mitigation Activity</div>
-                        <div class="material-description">Group activity on earthquake preparedness</div>
+                        <div class="material-title">Week 8 Discussion Slides</div>
+                        <div class="material-description">Discussion materials with exercises and questions</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
+                        <a href="https://docs.google.com/presentation/d/1tE7DGO2la0A70LPFH11-KoioBlctfxRf7jVc7TVogvk/edit?usp=sharing" target="_blank" class="material-link">Open</a>
+                    </div>
+                </li>
+
+                <li class="material-item">
+                    <div class="material-info">
+                        <div class="material-title">Exam Review Quizizz</div>
+                        <div class="material-description">Interactive quiz for exam preparation</div>
+                    </div>
+                    <div class="material-links">
+                        <a href="https://wayground.com/admin/assessment/67173db2f6da1c63c56eeb17?source=lesson_share" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
             </ul>
         </div>
 
-        <!-- CIVENG 180 Materials -->
+        <!-- E93 Materials -->
         <div class="course-section">
-            <h2>CIVENG 180: CEE Systems Design</h2>
+            <h2>E93: Energy Engineering Seminar</h2>
+            <p style="color: #666; margin-bottom: 20px; font-size: 0.95rem;">Guest lecture on heat stress and climate adaptation</p>
             <ul class="material-list">
                 <li class="material-item">
                     <div class="material-info">
-                        <div class="material-title">Project Grading Rubric</div>
-                        <div class="material-description">Detailed criteria for design project evaluation</div>
+                        <div class="material-title">Guest Lecture Presentation</div>
+                        <div class="material-description">Presentation on Extended Heat Index and heat vulnerability</div>
                     </div>
                     <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
-                    </div>
-                </li>
-
-                <li class="material-item">
-                    <div class="material-info">
-                        <div class="material-title">Feedback Template</div>
-                        <div class="material-description">Template for providing constructive project feedback</div>
-                    </div>
-                    <div class="material-links">
-                        <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank" class="material-link preview">Preview</a>
-                        <a href="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" class="material-link">Download</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-
-        <!-- Complete Folders -->
-        <div class="course-section">
-            <h2>📁 Complete Course Folders</h2>
-            <ul class="material-list">
-                <li class="material-item">
-                    <div class="material-info">
-                        <div class="material-title">All EPS 81 Materials</div>
-                        <div class="material-description">Access the complete Google Drive folder</div>
-                    </div>
-                    <div class="material-links">
-                        <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" class="material-link">Open Folder</a>
-                    </div>
-                </li>
-
-                <li class="material-item">
-                    <div class="material-info">
-                        <div class="material-title">All EPS C20 Materials</div>
-                        <div class="material-description">Access the complete Google Drive folder</div>
-                    </div>
-                    <div class="material-links">
-                        <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" class="material-link">Open Folder</a>
-                    </div>
-                </li>
-
-                <li class="material-item">
-                    <div class="material-info">
-                        <div class="material-title">All CIVENG 180 Materials</div>
-                        <div class="material-description">Access the complete Google Drive folder</div>
-                    </div>
-                    <div class="material-links">
-                        <a href="https://drive.google.com/drive/folders/YOUR_FOLDER_ID" target="_blank" class="material-link">Open Folder</a>
+                        <a href="https://docs.google.com/presentation/d/1kiQwwgdwnSBd3GZvmfb5GjxvAdlQOJI3bWtN6p8l-1g/edit?usp=sharing" target="_blank" class="material-link">Open</a>
                     </div>
                 </li>
             </ul>
