--- a/bio/teaching.html
+++ b/bio/teaching.html
@@ -376,12 +376,14 @@
 
     <main>
         <h1>Teaching Experience</h1>
-        
+
         <div class="intro">
             <p>
-                As a Graduate Teaching Assistant at UC Berkeley, I have had the privilege of supporting 
-                undergraduate students in their learning across climate science, earthquake hazards, and 
-                civil engineering design courses.
+                Teaching has been one of the most rewarding aspects of my graduate experience at UC Berkeley.
+                As a Graduate Teaching Assistant, I've had the privilege of working with diverse undergraduate
+                students across climate science, earthquake hazards, and civil engineering design. Each course
+                has deepened my ability to translate complex scientific concepts into accessible, engaging lessons
+                that help students connect theory to real-world challenges.
             </p>
         </div>
 
@@ -390,26 +392,27 @@
                 <div class="course-header">
                     <h2 class="course-title">EPS 81: Extreme Weather and Climate</h2>
                     <div class="course-meta">
-                        <span>📅 January 2025 – May 2025</span>
-                        <span>🏫 UC Berkeley</span>
+                        <span>January 2025 – May 2025</span>
+                        <span>UC Berkeley</span>
                     </div>
                     <div class="instructor">
-                        Instructor: Dr. William Boos 
-                        <a href="mailto:william.boos@berkeley.edu">✉️</a>
+                        Instructor: Dr. William Boos
                     </div>
                 </div>
-                <ul class="responsibilities">
-                    <li>Held twice-weekly 1-hour study sessions to reinforce course concepts and answer student questions</li>
-                    <li>Led three 2-hour comprehensive exam review sessions</li>
-                    <li>Substituted two 1-hour lectures, presenting course material to the full class</li>
-                    <li>Developed supplementary course materials to enhance student understanding</li>
-                </ul>
-                
-                <!-- Add this inside the course-materials div for relevant courses -->
+                <p style="font-size: 1.05rem; line-height: 1.7; color: #555; margin: 1.5rem 0;">
+                    This course explores the physics and impacts of extreme weather events in our changing climate.
+                    I held twice-weekly study sessions where students could dive deeper into atmospheric dynamics,
+                    climate modeling, and the connections between extreme events and climate change. Leading exam
+                    review sessions and substituting two lectures gave me the opportunity to present complex material
+                    on topics like heat waves, hurricanes, and precipitation extremes to the full class. I also developed
+                    supplementary materials including homework error guides and practice worksheets to help students
+                    master challenging concepts and improve their problem-solving skills.
+                </p>
+
                 <div class="course-materials">
-                    <h3>📚 Course Materials</h3>
+                    <h3>Teaching Materials</h3>
                     <div class="materials-links">
-                        <a href="teaching-materials.html?course=eps81" class="material-link">🔒 Access Private Materials</a>
+                        <a href="teaching-materials.html?course=eps81" class="material-link">Access Private Materials (Password Protected)</a>
                     </div>
                 </div>
             </div>
@@ -418,41 +421,51 @@
                 <div class="course-header">
                     <h2 class="course-title">EPS C20: Earthquakes in Your Backyard</h2>
                     <div class="course-meta">
-                        <span>📅 August 2024 – December 2024</span>
-                        <span>🏫 UC Berkeley</span>
+                        <span>August 2024 – December 2024</span>
+                        <span>UC Berkeley</span>
                     </div>
                     <div class="instructor">
-                        Instructor: Dr. Richard Allen 
-                        <a href="mailto:rallen@berkeley.edu">✉️</a>
+                        Instructor: Dr. Richard Allen
                     </div>
                 </div>
-                <ul class="responsibilities">
-                    <li>Facilitated weekly discussion sections to explore earthquake science and hazard mitigation</li>
-                    <li>Organized and led review sessions before major assessments</li>
-                    <li>Created educational materials to support student learning and engagement</li>
-                </ul>
+                <p style="font-size: 1.05rem; line-height: 1.7; color: #555; margin: 1.5rem 0;">
+                    Teaching earthquake science in the San Francisco Bay Area, where students literally feel the subject
+                    matter, made this course particularly engaging. I facilitated weekly discussion sections exploring topics
+                    from plate tectonics and seismic waves to earthquake forecasting and building codes. Creating interactive
+                    quizzes and discussion materials helped students connect abstract geological concepts to their lived
+                    experience in earthquake country. The exam review sessions I organized gave students space to work through
+                    complex problems and develop intuition about how earthquakes work and how we can build resilience to
+                    seismic hazards.
+                </p>
+
+                <div class="course-materials">
+                    <h3>Teaching Materials</h3>
+                    <div class="materials-links">
+                        <a href="teaching-materials.html?course=epsc20" class="material-link">Access Private Materials (Password Protected)</a>
+                    </div>
+                </div>
             </div>
 
             <div class="course">
                 <div class="course-header">
                     <h2 class="course-title">CIVENG 180: CEE Systems Design</h2>
                     <div class="course-meta">
-                        <span>📅 January 2024 – May 2024</span>
-                        <span>🏫 UC Berkeley</span>
+                        <span>January 2024 – May 2024</span>
+                        <span>UC Berkeley</span>
                     </div>
                     <div class="instructor">
-                        Instructors: Dr. Stan Tuholski 
-                        <a href="mailto:sjtuholski@lbl.gov">✉️</a>, 
-                        Dr. Hung Nguyen 
-                        <a href="mailto:hung-nguyen@berkeley.edu">✉️</a>
+                        Instructors: Dr. Stan Tuholski, Dr. Hung Nguyen
                     </div>
                 </div>
-                <ul class="responsibilities">
-                    <li>Provided constructive feedback on semester-long engineering design projects</li>
-                    <li>Supported project-based learning modules focused on applied civil and environmental systems</li>
-                    <li>Assisted students in developing innovative design solutions to real-world infrastructure challenges</li>
-                    <li>Evaluated student work and provided detailed grading feedback</li>
-                </ul>
+                <p style="font-size: 1.05rem; line-height: 1.7; color: #555; margin: 1.5rem 0;">
+                    This capstone design course challenged students to tackle real-world civil and environmental engineering
+                    problems through semester-long team projects. My role focused on mentoring student teams as they navigated
+                    the messy, iterative process of engineering design. I provided feedback on their project proposals,
+                    design iterations, and final deliverables, helping them develop both technical rigor and creative
+                    problem-solving skills. Watching students move from initial uncertainty to presenting polished,
+                    innovative infrastructure solutions was incredibly rewarding and reinforced my passion for mentoring
+                    the next generation of environmental engineers.
+                </p>
             </div>
         </div>
     </main>
